--- a/css/style.css
+++ b/css/style.css
@@ -14,33 +14,17 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 4.6rem 0;
-}
-
-.hero {
-  max-width: 120rem;
-
-  margin: 0 auto;
-  display: grid;
-  gap: 9.6rem;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
+/******************************/
+/*GENERAL REUSABLE COMPONENTS*/
+/******************************/
 
 .heading-primary {
-  font-size: 5.2rem;
+  font-size: 4.4rem; /*5.2*/
   font-weight: 700;
   line-height: 1.05;
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -48,7 +32,7 @@ body {
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
-  padding: 1.6rem 3.2rem;
+  padding: 1.4rem 3.2rem;
   border-radius: 9px;
   transition: background-color 0.3s;
 }
@@ -79,6 +63,50 @@ body {
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
+
+/******************************/
+/* HEADER  */
+/******************************/
+
+.logo {
+  height: 2.2rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+/******************************/
+/* HERO SECTION */
+/******************************/
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 5.6rem 0;
+}
+
+.hero {
+  max-width: 120rem;
+
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  gap: 9.6rem;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 6.4rem;
+}
+
 .hero-img {
   width: 100%;
 }
@@ -87,7 +115,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
-  margin-top: 8rem;
+  margin-top: 9rem;
 }
 
 .delivered-imgs {
