--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,29 @@ body {
 /*GENERAL REUSABLE COMPONENTS*/
 /******************************/
 
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
 .heading-primary {
   font-size: 4.4rem; /*5.2*/
   font-weight: 700;
@@ -181,4 +204,13 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/******************************/
+/* HOW IT WORKS SECTION */
+/******************************/
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
 }
