--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,35 @@ body {
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
 }
+.heading-primary,
+.heading-secondary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+}
 
 .heading-primary {
   font-size: 4.4rem; /*5.2*/
-  font-weight: 700;
+
   line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
+
   margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2rem;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 2.4rem;
+  letter-spacing: 0.75px;
 }
 
 .btn:link,
@@ -212,5 +233,8 @@ body {
 
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
+}
+
+.step-img {
+  width: 50%;
 }
