--- a/css/general.css
+++ b/css/general.css
@@ -45,6 +45,10 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid-center-v {
   align-items: center;
 }
@@ -67,7 +71,7 @@ body {
 
 .heading-secondary {
   font-size: 4.4rem;
-  line-height: 1.2rem;
+  line-height: 1.2;
   margin-bottom: 9.6rem;
 }
 
@@ -86,7 +90,7 @@ body {
   margin-bottom: 2.4rem;
   letter-spacing: 0.75px;
 }
-
+.btn,
 .btn:link,
 .btn:visited {
   text-decoration: none;
@@ -95,6 +99,9 @@ body {
   padding: 1.4rem 3.2rem;
   border-radius: 9px;
   transition: all 0.3s;
+
+  border: none;
+  cursor: pointer;
 }
 
 .btn--full:link,
@@ -118,6 +125,18 @@ body {
 .btn--outline:active {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -154,6 +173,11 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 .margin-right-sm {
