--- a/css/general.css
+++ b/css/general.css
@@ -5,6 +5,7 @@
 }
 html {
   font-size: 62.5%; /* 10/16*100 */
+  overflow-x: hidden;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
   font-weight: 400;
   line-height: 1;
   color: #555;
+  overflow-x: hidden;
 }
 
 /******************************/
